--- a/pierre_stuff/1.0/science/energy1.html
+++ b/pierre_stuff/1.0/science/energy1.html
@@ -277,7 +277,7 @@
 </ul>
 </div>
 <div class="paragraph">
-<p>Basically, if you want to heat up an object, you need to provide an amount of energy equal to <strong><em>temperature_increase x mass x specific heat – or, reusing ∆ to indicate variation: E = mc<sub>p</sub>∆T</em></strong>. Makes sense, I think. If the provided energy is supplied by fire, it will actually come from the <em>chemical energy</em> stored in the wood (see below about chemical energy). Then, if the object cools down to its initial temperature, it will shed the exact same energy – this energy typically heating up its environment. Note that water has a pretty high specific heat <sup class="footnote">[<a id="_footnoteref_3" class="footnote" href="#_footnotedef_3" title="On this note, a familiar energy unit of measurement is the calorie (cal). It's no longer used in physics, but its origin relates to thermal energy… and it's still used by weight watchers! It is defined as the amount of energy needed to increase the temperature of a gram of water by 1°C. 1cal~4,2J, which tells us that water's specific heat is about 4200J/°C/kg.">3</a>]</sup> – we will come back to this later when talking about “state energy”.</p>
+<p>Basically, if you want to heat up an object, you need to provide an amount of energy equal to <strong><em>temperature_increase x mass x specific heat – or, reusing ∆ to indicate variation: E = mc<sub>p</sub>∆T</em></strong>. Makes sense, I think. If the provided energy is supplied by fire, it will actually come from the <em>chemical energy</em> stored in the wood (see below about chemical energy). Then, if the object cools down to its initial temperature, it will shed the exact same energy – this energy typically heating up its environment. Note that water has a pretty high specific heat <sup class="footnote">[<a id="_footnoteref_3" class="footnote" href="#_footnotedef_3" title="On this note, a familiar energy unit of measurement is the calorie (cal). It's no longer used in physics, but its origin relates to thermal energy… and it's still used by weight watchers! It is defined as the amount of energy needed to increase the temperature of a gram of water by 1°C. 1cal~4,2J, which tells us that water's specific heat is about 4200J/°C/kg.">3</a>]</sup> – we will come back to this later when talking about "state energy".</p>
 </div>
 <div class="paragraph">
 <p>I said that the molecules' thermal movement does not create any movement at macroscopic level. However, in some cases, thermal energy can turn into visible "macroscopic" kinetic energy. If gas is confined in a finite volume (say air in a tyre’s inner tube), its randomly moving molecules are stopped by the inside of the tube, bouncing on it. This results in a force applying to all the inside surface of the tube, modelled by the concept of <em>pressure</em> – a force per unit of surface. Molecules "pushing" the inside of the tube, if you will.</p>
@@ -302,10 +302,10 @@
 <div class="paragraph">
 <p>Zero Kelvin corresponds to -273°C. Nice and cool. Actually, it doesn&#8217;t get cooler than that: a temperature measured in Kelvins cannot be negative.</p>
 </div>
-<div style="border-style: double; padding: 0px 10px 25px 10px; background-color: #ededed;">
+<div class="sidebarblock">
+<div class="content">
 <div class="paragraph">
-<p style="font-size: 120%;"><strong>RECAP</strong></p>
-<hr>
+<p><strong>RECAP</strong></p>
 </div>
 <div class="paragraph">
 <p><strong><em>E<sub>k</sub> = \$1/2mv^2\$</em></strong>: kinetic energy = <em>1/2 x mass x square</em> velocity. The energy of a train at full speed…</p>
@@ -321,6 +321,8 @@
 </div>
 <div class="paragraph">
 <p><strong><em>P = pRT</em></strong>: pressure = <em>density x "ideal gas constant" x temperature</em> (density reflecting the number of molecules per m<sup>3</sup>)</p>
+</div>
+</div>
 </div>
 </div>
 </div>
@@ -350,7 +352,7 @@
 <p>As the wave propagates, the crests travel at speed <strong><em>c</em></strong> – the speed of light. If we stand at a given position as the wave goes by, the field oscillates from being a "crest" to being a "trough" and back – imagine an anchored boat bobbing up and down as sea waves go past. The <em>period</em> of this oscillation is the time between two passing crests, i.e., the time it takes for the wave to travel one wavelength. So it’s easy: the <em>period</em> is equal to the <em>wavelength</em> divided by the <em>speed of light</em>, or <strong><em>λ/c</em></strong>, expressed in seconds. The <em>frequency</em> of the wave is the number of periods per second, noted <strong><em>ν</em></strong>. So <strong><em>ν</em></strong> is simply 1 second divided by the period: <strong><em>ν = 1/(λ/c)</em></strong>, or more simply <strong><em>ν = c/λ</em></strong>, expressed in Hertz (=units per second, noted as Hz). The shorter the wavelength, the higher the frequency. This "frequency" is the one that appears in the common language too when we speak about radio waves – yes, radio waves are electromagnetic waves like light, but at different (much lower) frequencies. Indeed, it is the frequency attached to radio stations – we can now make a bit more sense of it&#8230;&#8203; Electromagnetic waves’ frequency also happens to be closely related to their capacity to exchange energy with matter, but this will be for our next paper…</p>
 </div>
 <div class="paragraph">
-<p>Electromagnetic waves' wavelengths (hence frequencies) can take a very wide range of values that lead to very different behaviours. We will see below that completely different phenomena are all electromagnetic waves – just with very different wavelengths. This large span of values will prompt use to use various units of measurement that we will introduce along the way (see also the Reference Annex that closes the Energy Prologue paper). In the case of light, wavelength (or, equivalently, frequency) defines the colour of the light wave. Its longest wavelength (λ = 700nm <sup class="footnote">[<a id="_footnoteref_6" class="footnote" href="#_footnotedef_6" title="1nm: one nanometre = a millionth of a millimetre…">6</a>]</sup> is visible as red, its shortest (λ = 400nm) as violet. In between, a continuum of colours. Now what if an electromagnetic wave is longer than a "red" wave or shorter than a "violet" one? Well, it’s still an electromagnetic wave propagating at 300000km/s. As wavelength increases beyond red, we can no longer see it, but we can still detect it. Just a bit longer than red (λ~700nm to 100µm <sup class="footnote">[<a id="_footnoteref_7" class="footnote" href="#_footnotedef_7" title="1µm: one micrometre, a thousandth of a millimetre, i.e., 1000nm">7</a>]</sup>, we get "infrared". Infrared waves interact with matter in a very interesting way: they easily transfer their energy to matter, heating it up. Think infrared heating.</p>
+<p>Electromagnetic waves' wavelengths (hence frequencies) can take a very wide range of values that lead to very different behaviours. We will see below that completely different phenomena are all electromagnetic waves – just with very different wavelengths. This large span of values will prompt use to use various units of measurement that we will introduce along the way (see also <a href="prologue.html#ref-appendix" class="page">the Reference Annex that closes the Energy Prologue paper</a>). In the case of light, wavelength (or, equivalently, frequency) defines the colour of the light wave. Its longest wavelength (λ = 700nm <sup class="footnote">[<a id="_footnoteref_6" class="footnote" href="#_footnotedef_6" title="1nm: one nanometre = a millionth of a millimetre…">6</a>]</sup> is visible as red, its shortest (λ = 400nm) as violet. In between, a continuum of colours. Now what if an electromagnetic wave is longer than a "red" wave or shorter than a "violet" one? Well, it’s still an electromagnetic wave propagating at 300000km/s. As wavelength increases beyond red, we can no longer see it, but we can still detect it. Just a bit longer than red (λ~700nm to 100µm <sup class="footnote">[<a id="_footnoteref_7" class="footnote" href="#_footnotedef_7" title="1µm: one micrometre, a thousandth of a millimetre, i.e., 1000nm">7</a>]</sup>, we get "infrared". Infrared waves interact with matter in a very interesting way: they easily transfer their energy to matter, heating it up. Think infrared heating.</p>
 </div>
 <div class="paragraph">
 <p>If we increase wavelength further, we reach the range of <em>microwaves</em> (λ~1cm to 1m; a famous example is λ = 12.5cm, or equivalently f = 2.4GHz <sup class="footnote">[<a id="_footnoteref_8" class="footnote" href="#_footnotedef_8" title="1GHz: one gigahertz = 1 billion Hz">8</a>]</sup>, for Wi-Fi… and microwave ovens); then radio waves – used to transmit radio and TV (λ~meters to kilometres, e.g. λ~3m or f = 100MHz <sup class="footnote">[<a id="_footnoteref_9" class="footnote" href="#_footnotedef_9" title="1MHz : one megahertz = 1 million Hz">9</a>]</sup> for FM radio).</p>
@@ -441,10 +443,10 @@
 <div class="paragraph">
 <p>Ah, before I forget: the energy required to evaporate a certain amount of water is, predictably, proportional to its mass. The multiplication factor is a property of water, called its <em>latent heat of vaporisation</em>, noted <strong><em>L<sub>v</sub></em></strong>. In other words, to vaporise a mass <strong><em>m</em></strong> of water, you need an amount of energy <strong><em>E = mL<sub>v</sub></em></strong>, and condensing the same mass of vapour back to liquid water will release the exact same amount of energy. Similarly, melting ice into water requires an amount of energy <strong><em>E = mL<sub>f</sub></em></strong>, where <strong><em>L<sub>f</sub></em></strong> is water’s <em>latent heat of fusion</em>. Of course, this does not just apply to water – other bodies also undergo fusion and evaporation, albeit at sometimes very different temperatures. All have their own latent heats of fusion and vaporisation. Interestingly, like water’s specific heat, water’s latent heats are among the highest in nature.</p>
 </div>
-<div style="border-style: double; padding: 0px 10px 25px 10px; background-color: #ededed;">
+<div class="sidebarblock">
+<div class="content">
 <div class="paragraph">
-<p style="font-size: 120%;"><strong>RECAP</strong></p>
-<hr>
+<p><strong>RECAP</strong></p>
 </div>
 <div class="paragraph">
 <p>Friction is an "energy degrader", turning macroscopic kinetic energy into thermal energy.</p>
@@ -463,6 +465,8 @@
 </div>
 <div class="paragraph">
 <p>These energies are usually much higher than the energy required to increase the temperature of the same mass by 1°C: latent heats are much higher than specific heats, giving evaporation a key role in climate.</p>
+</div>
+</div>
 </div>
 </div>
 <div class="sect2">
@@ -558,6 +562,7 @@
 </main>
 </div>
 <footer class="footer">
+  <p>Editorial advice and website support by Vanda Illyes.</p>
   <p>This page was built using the Antora default UI.</p>
   <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
 </footer>
