--- a/pierre_stuff/1.0/science/index.html
+++ b/pierre_stuff/1.0/science/index.html
@@ -139,6 +139,25 @@ Note aux lecteurs français: bizarrement l&#8217;écriture dans ce domaine me vi
 <div class="paragraph">
 <p>I am convinced that science is an incredibly fun domain, but you may wonder if this section is for you. If you are not versed in science, will these papers be enjoyable reading for you? If you <em>are</em> well-versed already, will they tell you anything new? To be honest, I have the same questions myself. I tried a slightly perilous game: being accessible to anyone who remembers the basics of secondary school maths, and "telling the story" in a way that brings something new to more advanced readers as well – a different perspective, so to speak. Obviously, this could be a recipe to lose the former AND bore the latter… Only one way to find out: read the papers! (Isn&#8217;t that crafty teasing? :-))</p>
 </div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="prologue.html" class="page">Prologue</a></p>
+</li>
+<li>
+<p><a href="energy1.html" class="page">Energy – Episode 1</a></p>
+</li>
+<li>
+<p><a href="energy2.html" class="page">Energy – Episode 2</a></p>
+</li>
+<li>
+<p><a href="energy3.html" class="page">Energy – Episode 3</a></p>
+</li>
+<li>
+<p><a href="relativity.html" class="page">Sensing Relativity</a></p>
+</li>
+</ul>
+</div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
   <div class="toc-menu"></div>
@@ -147,6 +166,7 @@ Note aux lecteurs français: bizarrement l&#8217;écriture dans ce domaine me vi
 </main>
 </div>
 <footer class="footer">
+  <p>Editorial advice and website support by Vanda Illyes.</p>
   <p>This page was built using the Antora default UI.</p>
   <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
 </footer>
