--- a/pierre_stuff/1.0/science/energy2.html
+++ b/pierre_stuff/1.0/science/energy2.html
@@ -125,6 +125,9 @@
 <div class="paragraph">
 <p>Click <a href="https://drive.google.com/file/d/1SFgUNg2Ba_HSVDU9EL6SlKBlBuqf-1OP/view?usp=sharing">here</a> for downloadable PDF version.</p>
 </div>
+<div class="paragraph">
+<p>Online version coming soon&#8230;&#8203;</p>
+</div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
   <div class="toc-menu"></div>
@@ -133,6 +136,7 @@
 </main>
 </div>
 <footer class="footer">
+  <p>Editorial advice and website support by Vanda Illyes.</p>
   <p>This page was built using the Antora default UI.</p>
   <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
 </footer>
