--- a/pierre_stuff/1.0/science/relativity.html
+++ b/pierre_stuff/1.0/science/relativity.html
@@ -123,7 +123,7 @@
 <article class="doc">
 <h1 class="page">Sensing Relativity</h1>
 <div class="paragraph">
-<p>&lt;placeholder&gt;</p>
+<p>Coming soon&#8230;&#8203;</p>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
@@ -133,6 +133,7 @@
 </main>
 </div>
 <footer class="footer">
+  <p>Editorial advice and website support by Vanda Illyes.</p>
   <p>This page was built using the Antora default UI.</p>
   <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
 </footer>
