--- a/pierre_stuff/1.0/science/energy3.html
+++ b/pierre_stuff/1.0/science/energy3.html
@@ -123,6 +123,9 @@
 <article class="doc">
 <h1 class="page">Energy – Episode 3</h1>
 <div class="paragraph">
+<p>Click <a href="https://drive.google.com/file/d/17B4_ZMDw1DesryjlkNi6gCFmauLExLAy/view?usp=sharing">here</a> for downloadable PDF version.</p>
+</div>
+<div class="paragraph">
 <p>Coming soon&#8230;&#8203;</p>
 </div>
 </article>
