--- a/pierre_stuff/1.0/science/energy3.html
+++ b/pierre_stuff/1.0/science/energy3.html
@@ -126,7 +126,7 @@
 <p>Click <a href="https://drive.google.com/file/d/17B4_ZMDw1DesryjlkNi6gCFmauLExLAy/view?usp=sharing">here</a> for downloadable PDF version.</p>
 </div>
 <div class="paragraph">
-<p>Coming soon&#8230;&#8203;</p>
+<p>Online version coming soon&#8230;&#8203;</p>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
