--- a/pierre_stuff/1.0/science/energy1.html
+++ b/pierre_stuff/1.0/science/energy1.html
@@ -561,39 +561,6 @@
 </div>
 </div>
 </div>
-<div id="footnotes">
-<hr>
-<div class="footnote" id="_footnotedef_1">
-<a href="#_footnoteref_1">1</a>. Molecules are microscopic groups of atoms that constitute the basis of matter around us. More on these later.
-</div>
-<div class="footnote" id="_footnotedef_2">
-<a href="#_footnoteref_2">2</a>. That is, until the object stops. Then it will start moving in the opposite direction to its initial motion, i.e., in <strong><em>f</em></strong>'s direction. <strong><em>f</em></strong> will then start working positively, logically causing kinetic energy to increase.
-</div>
-<div class="footnote" id="_footnotedef_3">
-<a href="#_footnoteref_3">3</a>. On this note, a familiar energy unit of measurement is calorie (cal). It&#8217;s no longer used in physics, but its origin relates to thermal energy… and it&#8217;s still used by weight watchers! It is defined as the amount of energy needed to increase the temperature of a gram of water by 1°C. 1cal~4,2J, which tells us that water&#8217;s specific heat is about 4200J/°C/kg.
-</div>
-<div class="footnote" id="_footnotedef_4">
-<a href="#_footnoteref_4">4</a>. More generally in physics, a field is a local property of space, quantifiable, that impacts objects located where the field is active. In this instance, an electric field exerts a force on <em>charged</em> particles or objects. There are many other fields with different actions, e.g.: a magnetic field attracts or repels… er… <em>magnetic</em> objects; a gravitational field attracts <em>massive</em> objects.
-</div>
-<div class="footnote" id="_footnotedef_5">
-<a href="#_footnoteref_5">5</a>. Electric fields exert forces on charged material, while magnetic fields impact magnetic material (think of magnets). Electric and magnetic are deeply interrelated in the model called electromagnetism theory, which we won’t try to detail here – too maths-riddled!
-</div>
-<div class="footnote" id="_footnotedef_6">
-<a href="#_footnoteref_6">6</a>. 1nm: one nanometre = a millionth of a millimetre…
-</div>
-<div class="footnote" id="_footnotedef_7">
-<a href="#_footnoteref_7">7</a>. 1µm: one micrometre, a thousandth of a millimetre, i.e., 1000nm
-</div>
-<div class="footnote" id="_footnotedef_8">
-<a href="#_footnoteref_8">8</a>. 1GHz: one gigahertz = 1 billion Hz
-</div>
-<div class="footnote" id="_footnotedef_9">
-<a href="#_footnoteref_9">9</a>. 1MHz : one megahertz = 1 million Hz
-</div>
-<div class="footnote" id="_footnotedef_10">
-<a href="#_footnoteref_10">10</a>. 1pm: one picometre = one thousandth of a nanometre, i.e., one billionth of a millimetre
-</div>
-</div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
   <div class="toc-menu"></div>
@@ -632,5 +599,7 @@ MathJax.Hub.Register.StartupHook("AsciiMath Jax Ready", function () {
 })
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
+<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js'></script>
+<script src='../../../_/js/touchHover.js'></script>
   </body>
 </html>
