--- a/pierre_stuff/1.0/science/autochromes.html
+++ b/pierre_stuff/1.0/science/autochromes.html
@@ -153,16 +153,16 @@
 <p>In a properly focussed camera, every light beam that emanates from a point of the subject and goes through the lens converges back to a single spot on the film – or, rather, on the plate, if we think early 20<sup>th</sup> century. If the pictured object is coloured, the light that "hits the spot" contains the mix of frequencies that defines the object&#8217;s colour. The problem, back in the 1910s, is that plates cannot detect this mix. They just react to the overall light intensity, which darkens them. Therefore they yield black-and-white negatives. Then "black-and-white technology" has smart ways to invert those negatives and turn them into "positive" black-and-white plates via appropriate chemical reactions.</p>
 </div>
 <div class="paragraph">
-<p>Now, if the plate is powdered with coloured "filters", the amount of light let through by each filter will depend on the colour of the incoming beam – hence of the pictured object. (<em>From this point onwards, you may want to refer to the diagrams below</em>). A red beam will only go through red flakes and be blocked out by blue and green flakes. The glass spots behind the red flakes will be darkened, but those behind the blue/green flakes will not. If the beam&#8217;s colour is not "pure" red, blue, or green, then each filter will let the red/blue/green component of the beam go through and block the rest. Depending on the intensity of each component (i.e., on the beam&#8217;s exact colour and overall intensity), the coating behind the red/green/blue flakes will darken accordingly. After chemically inverting the plate, the coating&#8217;s grey shade behind each flake will reflect the intensity of the red/blue/green component we want to render: white for maximal intensity, black if the component is absent. All we have to do is back-light the plate. The flakes being too small for our eyes to distinguish them, we just see the combination of the light beams let through by adjacent flakes, i.e., the original colour! Sooo elegant.</p>
+<p>Now, if the plate is powdered with coloured "filters", the amount of light let through by each filter will depend on the colour of the incoming beam – hence of the pictured object. (<em>From this point onwards, you may want to refer to the diagrams below.</em>) A red beam will only go through red flakes and be blocked out by blue and green flakes. The glass spots behind the red flakes will be darkened, but those behind the blue/green flakes will not. If the beam&#8217;s colour is not "pure" red, blue, or green, then each filter will let the red/blue/green component of the beam go through and block the rest. Depending on the intensity of each component (i.e., on the beam&#8217;s exact colour and overall intensity), the coating behind the red/green/blue flakes will darken accordingly. After chemically inverting the plate, the coating&#8217;s grey shade behind each flake will reflect the intensity of the red/blue/green component we want to render: white for maximal intensity, black if the component is absent. All we have to do is back-light the plate. The flakes being too small for our eyes to distinguish them, we just see the combination of the light beams let through by adjacent flakes, i.e., the original colour! Sooo elegant.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/autochromes_exposure.png" alt="autochromes exposure" width="541" height="457">
+<img src="_images/autochromes_exposure.png" alt="autochromes exposure" width="406" height="343">
 </div>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/autochromes_inversion.png" alt="autochromes inversion" width="539" height="442">
+<img src="_images/autochromes_inversion.png" alt="autochromes inversion" width="404" height="332">
 </div>
 </div>
 </div>
