--- a/pierre_stuff/1.0/science/relativity.html
+++ b/pierre_stuff/1.0/science/relativity.html
@@ -69,6 +69,9 @@
   <li class="nav-item is-current-page" data-depth="1">
     <a class="nav-link" href="relativity.html">Sensing Relativity</a>
   </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="autochromes.html">Autochromes: The Tale of the Potato Starch</a>
+  </li>
 </ul>
   </li>
 </ul>
