--- a/pierre_stuff/1.0/index.html
+++ b/pierre_stuff/1.0/index.html
@@ -13,9 +13,6 @@
   <nav class="navbar">
     <div class="navbar-brand">
       <a class="navbar-item" href="../..">Pierre&#x27;s Stuff</a>
-        <div class="navbar-item">
-          <input id="search-input" type="text" placeholder="Search docs">
-        </div>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
         <span></span>
@@ -50,6 +47,27 @@
   <nav class="nav-menu">
     <h3 class="title"><a href="index.html">About &quot;Pierre&#x27;s Stuff&quot;</a></h3>
 <ul class="nav-list">
+  <li class="nav-item" data-depth="0">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="music/index.html">Music</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="music/3b.html">B, B, &amp; B</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="music/brassens.html">Brassens</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="music/gorille.html">Le Gorille</a>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
   <li class="nav-item" data-depth="0">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="science/index.html">Science</a>
@@ -183,9 +201,6 @@
   <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
 </footer>
 <script src="../../_/js/site.js"></script>
-<script src="../../_/js/vendor/lunr.js"></script>
-<script src="../../_/js/vendor/search.js" id="search-script" data-base-path="../.." data-page-path="/pierre_stuff/1.0/index.html"></script>
-<script async src="../../_/../search-index.js"></script>
 <script async src="../../_/js/vendor/highlight.js"></script>
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
