--- a/pierre_stuff/1.0/music/gorille.html
+++ b/pierre_stuff/1.0/music/gorille.html
@@ -163,7 +163,7 @@ Avec impudeur ces commères<sup class="footnote">[<abbr title="In its old sense,
 Lorgnaient<sup class="footnote">[<abbr title="&#8217;lorgner&#8217; = to look at, typically with envy. Very evocative here.">5</abbr>]</sup> même un endroit précis<br>
 Que rigoureusement<sup class="footnote">[<abbr title="Starting with a formal &#8217;rigoureusement&#8217; makes it sound falsely serious; standard form would be &#8217;que ma mère m&#8217;a rigoureusement défendu…&#8217;.">6</abbr>]</sup> ma mère<br>
 M&#8217;a défendu d&#8217;nommer ici<br>
-Gare au gorille!<sup class="footnote">[<abbr title="The meaning of this warning only becomes clear at the end.">7</abbr>]</sup>><br>
+Gare au gorille!<sup class="footnote">[<abbr title="The meaning of this warning only becomes clear at the end.">7</abbr>]</sup><br>
 <br>
 Tout-à-coup la prison bien close<br>
 Où vivait le bel animal<br>
