small editorial changes

--- a/pierre_stuff/1.0/music/3b.html
+++ b/pierre_stuff/1.0/music/3b.html
@@ -158,7 +158,7 @@ Having grown up under their influence, I made the assumption that my own reactio
 <p>Ferré is the revolutionary guy – the communist of the gang. Also quite intense, he could address universal questions such as age or death, but he was much more on the political side.</p>
 </div>
 <div class="paragraph">
-<p>Now, I don&#8217;t fully agree with this list. I would take Ferré out because his "stream" proved less durable that the other two&#8217;s. And also because I find his writing a bit conceited and not nearly as good as Brel&#8217;s or Brassens'. Obviously, this is purely a personal opinion.</p>
+<p>Now, I don&#8217;t fully agree with this list. I would take Ferré out because his "stream" proved less durable than the other two&#8217;s. And also because I find his writing a bit conceited and not nearly as good as Brel&#8217;s or Brassens'. Obviously, this is purely a personal opinion.</p>
 </div>
 <div class="paragraph">
 <p>On the other hand, and this is quite recent, I would add one person to this list. Barbara. She embodies a much more relevant stream than Ferré&#8217;s: the emergence of a free woman, intelligent and sensitive, determined to live life to the full in spite of the social pressure women are still facing. She gets wounded in the process but she moves forward nevertheless. Her songs are all about this – and all refer to specific episodes of her life. Her writing is fluid, marvellously woven into the (beautiful) music. Her stories are moving yet full of energy – like her. Only I don&#8217;t like the way she sings. For this reason, I ignored her songs for a long time – until a brilliant young singer decided to cover them. And I discovered what I had missed.</p>
