--- a/pierre_stuff/1.0/music/brassens.html
+++ b/pierre_stuff/1.0/music/brassens.html
@@ -146,21 +146,21 @@
 <p>What I&#8217;m driving at is that Brassens was an introvert, very faithful to his gang of friends, appreciating a simple life with simple people. Once he had become (immensely) famous, he stayed in a very modest house he was partly renting, in a poor Parisian neighbourhood. This shows in his songs. In fact, his songs just tell (so cleverly!) his view of the world and, quite remarkably, he lived completely up to it. I will not pretend to describe his view of the world in depth, but we could say he was a fierce libertarian, very wary of the pressure society (groups, the public, and moral authorities) would put on individuals. This was obviously driven by the tragedies of the 20th century, the pathetic official communications (I should say propaganda) during that period and the mobs' behaviour after the war – e.g. some terrible scenes where women were shaved. He was very lucid about the post-1945 euphoria in particular, and went as far as questioning the relevance of fighting that war, which is probably the shortcoming of his reasoning.</p>
 </div>
 <div class="paragraph">
-<p>Anyway, his view was: respect others, let them live the way they want, don&#8217;t believe in big ideas, trust your own intelligence instead, don&#8217;t let groups dictate to you what to think – groups and administrations are essentially stupid. I suspect he was well aware of his own intelligence and had little time for those who obediently followed the mainstream&#8217;s opinion without any thought of their own. His other motto was: trust friendship and love rather than power and money – with a special respect for "small people". Again, he lived up to it, living simply, enjoying the company of lifelong friends. This was a very left-wing stance, but remember the left was very much occupied by communism at that time, and you can tell from the above that Brassens was very far from that kind of ideology. Maybe "intelligent anarchist" could define him, but in fact he didn&#8217;t have any political opinion, just his own view of how he wanted to live.</p>
+<p>Anyway, his view was: respect others, let them live the way they want, don&#8217;t believe in big ideas, trust your own intelligence instead, don&#8217;t let groups dictate to you what to think – groups and administrations are essentially stupid. I suspect he was well aware of his own intelligence and had little time for those who obediently followed the mainstream&#8217;s opinion without any thought of their own. His other motto was: trust friendship and love rather than power and money – with a special respect for "small people". Again, he lived up to it, living simply, enjoying the company of lifelong friends. This was a very left-wing stance, but remember the left was very much occupied by communism at the time, and you can tell from the above that Brassens was very far from that kind of ideology. Maybe "intelligent anarchist" could define him, but in fact he didn&#8217;t have any political opinion, just his own view of how he wanted to live.</p>
 </div>
 <div class="paragraph">
 <p>Now we can turn to his songs. All of them reflect the above. They are odes to friendship, love, generosity. Or they mock society&#8217;s absurdities with trademark humour ranging from gentle irony to hilarious absurdity – sometimes (but rarely) verging on cruelty.</p>
 </div>
 <div class="paragraph">
-<p>Before looking at examples, I have to say a few words about his lyrics. Their brilliance simply can&#8217;t be overstated. He had fantastic talent obviously, but also worked really hard: he read entire libraries – especially poetry, up to the 16th century. He could wordsmith a song for years if he wasn&#8217;t entirely satisfied with the result. He would use a very inventive, elaborate, literary, even old-fashioned language. When swearing, he would do it in an old-fashioned way too, conveying a delicious irony. His rhymes are very elaborate but always come naturally, and his lines are packed with alliterations and rhythmical effects. However sophisticated and original they are, his texts sound perfectly natural, you just think "Wow, that flows… I don&#8217;t want to change a word, it just sounds great and conveys exactly the right picture. And boy it rhymes perfectly… it has to be a mere coincidence, or it couldn&#8217;t sound that natural.". Quite logically, he is now recognised as a major French poet.</p>
+<p>Before looking at examples, I have to say a few words about his lyrics. Their brilliance simply can&#8217;t be overstated. He had fantastic talent obviously, but also worked really hard: he read entire libraries – especially poetry, up to the 16th century. He could wordsmith a song for years if he wasn&#8217;t entirely satisfied with the result. He would use a very inventive, elaborate, literary, even old-fashioned language. When swearing, he would do it in an old-fashioned way too, conveying a delicious irony. His rhymes are very elaborate but always come naturally, and his lines are packed with alliterations and rhythmical effects. However sophisticated and original they are, his texts sound perfectly natural, you just think <em>"Wow, that flows… I don&#8217;t want to change a word, it just sounds great and conveys exactly the right picture. And boy it rhymes perfectly… it has to be a mere coincidence, or it couldn&#8217;t sound that natural."</em>. Quite logically, he is now recognised as a major French poet.</p>
 </div>
 <div class="paragraph">
-<p>Here I want to point out his humour. He loves describing crazy situations to illustrate his point, with a crescendo in absurdity. But, more uniquely, he uses language itself as a "humorous vehicle". Summoning cranky images in a very formal and elaborate language (delivered on stage without a smile) is often irresistible. His masterpiece in that exercise will be our first example: <a href="gorille.html" class="page">Le Gorille</a>.</p>
+<p>Here I want to point out his humour. He loves describing crazy situations to illustrate his point, with a crescendo in absurdity. But, more uniquely, he uses language itself as a "humorous vehicle". Summoning cranky images in a very formal and elaborate language (delivered on stage without a smile) is often irresistible. His masterpiece in that exercise will be our first example: <em>Le Gorille</em>.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="gorille.html" class="page">Le Gorille</a></p>
+<p>A prime example of Brassens' genius: <a href="gorille.html" class="page">Le Gorille</a></p>
 </li>
 <li>
 <p>Love songs:</p>
@@ -171,6 +171,16 @@
 </li>
 <li>
 <p>Les Passantes</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Songs to "normal people":</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Pénélope</p>
 </li>
 </ul>
 </div>
