--- a/pierre_stuff/1.0/music/gorille.html
+++ b/pierre_stuff/1.0/music/gorille.html
@@ -138,7 +138,7 @@
 <h2 id="introduction"><a class="anchor" href="#introduction"></a>Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>As mentioned above, Brassens wrote <em>Le Gorille</em> early in his career – in 1952. It&#8217;s a stunning showcase of his talent as a wordsmith, but also of his intelligence: the scenario/language combination is hilarious, and the song is much more meaningful than it seems – its true meaning is very cleverly unveiled by the very last line. <sup class="footnote">[<abbr title="Brassens was helped by the fact that the idea of the end came to him after he had started writing what was just meant to be a fun, provocative song.">1</abbr>]</sup> I want to insist on this: there is some humour in the absurdity of the story, but the real fun resides in the elaborate language he uses to tell it, completely at odds with the contents and at the same time so apt to unravel events before our eyes with originality and accuracy, keeping the song well away from any vulgarity in spite of the rather trashy scenario.</p>
+<p>As mentioned above, Brassens wrote <em>Le Gorille</em> early in his career – in 1952. It&#8217;s a stunning showcase of his talent as a wordsmith, but also of his intelligence: the scenario/language combination is hilarious, and the song is much more meaningful than it seems – its true meaning is very cleverly unveiled by the very last line.<sup class="footnote">[<abbr title="Brassens was helped by the fact that the idea of the end came to him after he had started writing what was just meant to be a fun, provocative song.">1</abbr>]</sup> I want to insist on this: there is some humour in the absurdity of the story, but the real fun resides in the elaborate language he uses to tell it, completely at odds with the contents and at the same time so apt to unravel events before our eyes with originality and accuracy, keeping the song well away from any vulgarity in spite of the rather trashy scenario.</p>
 </div>
 <div class="paragraph">
 <p>I&#8217;ve known this song by heart for decades. Still, whenever I hear it or sing it in my head, I can&#8217;t help laughing out loud. It&#8217;s simply the funniest song I know. I will translate and comment the most linguistically inventive parts, trying to convey their humorous impact – although I&#8217;m aware it&#8217;s probably impossible to fully enjoy it unless French is your native language. I intentionally kept the translation close to the French structure, closer than a "natural-sounding" English version would require. The purpose is to help the "French-as-a-foreign-language" speaker understand some specificities of Brassens' writing.</p>
@@ -341,7 +341,7 @@ Beware of the gorilla!</p></td>
 </tbody>
 </table>
 <div class="paragraph">
-<p>Some additional notes about this song.</p>
+<p>Some additional notes about the song.</p>
 </div>
 </div>
 </div>
@@ -357,7 +357,7 @@ Beware of the gorilla!</p></td>
 <div class="ulist">
 <ul>
 <li>
-<p>"C&#8217;est complètement impossible" (pronouncing the bolded "e" and "t")</p>
+<p>"C&#8217;est complèt<b>e</b>men<b>t</b> impossible" (pronouncing the bolded "e" and "t")</p>
 </li>
 <li>
 <p>"C&#8217;est j&#8217;en suis convaincu la vieille"</p>
