--- a/pierre_stuff/1.0/music/index.html
+++ b/pierre_stuff/1.0/music/index.html
@@ -132,7 +132,7 @@
 <article class="doc">
 <h1 class="page">Music</h1>
 <div class="paragraph">
-<p>&lt;placeholder&gt;</p>
+<p>Introduction to come soon&#8230;&#8203;</p>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
